Added HEX class

--- a/Converter.vcxproj
+++ b/Converter.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="converterHEX.hpp" />
     <ClInclude Include="converterHSV.hpp" />
     <ClInclude Include="converterRGB.hpp" />
     <ClInclude Include="HEX.hpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="testClass.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="converterHEX.cpp" />
     <ClCompile Include="converterHSV.cpp" />
     <ClCompile Include="converterRGB.cpp" />
     <ClCompile Include="HEX.cpp" />
