Program is finished, little refactoring remaining

--- a/Converter.vcxproj
+++ b/Converter.vcxproj
@@ -139,18 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="converterHEX.hpp" />
-    <ClInclude Include="converterHSV.hpp" />
-    <ClInclude Include="converterRGB.hpp" />
+    <ClInclude Include="colorConverter.hpp" />
     <ClInclude Include="HEX.hpp" />
     <ClInclude Include="HSV.hpp" />
     <ClInclude Include="RGB.hpp" />
     <ClInclude Include="testClass.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="converterHEX.cpp" />
-    <ClCompile Include="converterHSV.cpp" />
-    <ClCompile Include="converterRGB.cpp" />
+    <ClCompile Include="colorConverter.cpp" />
     <ClCompile Include="HEX.cpp" />
     <ClCompile Include="HSV.cpp" />
     <ClCompile Include="main.cpp" />
